<resources>
    <string name="app_name">LimeAppCalc</string>
    <string name="back_image">back image</string>
    <string name="presentPh">現在pH</string>
    <string name="improvedPh">改善pH</string>
    <string name="plowingDepth">耕起深</string>
    <string name="soikTexture">土性</string>
    <string name="humusContent">腐植</string>
    <string name="bulkDensity">仮比重</string>
    <string name="productSelect">使用資材</string>
    <string name="alkalineContent">アルカリ分</string>
    <string name="resetBtn">リセット</string>
    <string name="calcBtn">計算</string>
    <string name="goNext">進む</string>
    <string name="backBefore">戻る</string>
    <string name="backMain">×</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="numPoint">.</string>
    <string name="numClear">C</string>
    <string name="num0">0</string>
    <string name="guidanceLabel">ガイダンスラベル</string>
    <string name="subguidanceLabel">サブガイダンスラベル</string>
    <string name="numberLabel">00.0</string>
    <string name="lab1">Lab1</string>
    <string name="lab2">Lab2</string>
    <string name="lab3">Lab3</string>
    <string name="lab4">Lab4</string>
    <string name="lab5">Lab5</string>
    <string name="changeUnit">単位変換</string>
    <string name="kg">kg</string>
    <string name="caution">注意事項</string>
    <string name="unitLab1">10a</string>
    <string name="explanation1">当たりの石灰施用量は</string>
    <string name="defaultValue">00000000</string>
    <string name="explaination2">です</string>
</resources>
