<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".InputNumberActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:contentDescription="@string/back_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ca_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="480dp"
        android:background="@drawable/frame_style_backview"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <Button
            android:id="@+id/nextBtn_ina"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/frame_style_btn_brown"
            android:text="@string/goNext"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn_ina"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn_ina"
            app:layout_constraintTop_toTopOf="@+id/backBtn_ina" />

        <Button
            android:id="@+id/backBtn_ina"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_style_btn_brown"
            android:text="@string/backBefore"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn_ina"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backmainBtn_ina"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:text="@string/backMain"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="240dp"
            android:layout_height="220dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberLabel">

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnPoint"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/numPoint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnClear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/numClear"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#DD2C00"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:text="@string/num0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/guidanceLabel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/guidanceLabel"
            android:textColor="#5F4325"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backmainBtn_ina" />

        <TextView
            android:id="@+id/subguidanceLabel"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/subguidanceLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidanceLabel" />

        <TextView
            android:id="@+id/numberLabel"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/numberLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subguidanceLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>